# tpm2-tcti-sgx

./: .gitignore  .travis.yml  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.md  configure.ac  sgx_sdk.mk
.ci/: Dockerfile-xenial  build-deps.sh
docs/: README.md  tcti-sgx-lib-boundary.xml  threat-profile.md
example/: application.c  enclave.c  enclave.edl  enclave_ocalls.c  enclave_ocalls.h  example.config.xml
include/: tss2-tcti-sgx.h  tss2tcti-skeleton.h
man/man3/: Tss2_Tcti_Sgx_Init.3
man/man7/: tss2-tcti-sgx.7
src/: tcti-sgx-mgr.c  tcti-sgx-mgr.cpp  tcti-sgx-mgr.h  tcti-sgx-mgr.map  tcti-sgx-mgr_priv.h  tcti-sgx.c  tcti-sgx.map  tcti-util.cpp  tcti-util.h  tcti_sgx.edl  tss2-tcti-sgx-mgr.c  tss2-tcti-sgx-mgr.map  tss2-tcti-sgx.c  tss2-tcti-sgx.edl  tss2-tcti-sgx.h  tss2-tcti-sgx.map  tss2_tcti_sgx.edl  tss2tcti-skeleton.c  tss2tcti-skeleton.map  util.h
src/include/: tcti-sgx-mgr.h  tcti-sgx-mgr_priv.h  tcti-sgx_priv.h  tss2-tcti-sgx-mgr.h  tss2-tcti-sgx.h  tss2-tcti-sgx_priv.h  tss2tcti-skeleton_priv.h
test/: tcti-sgx-call-tests.c  tcti-sgx-common.c  tcti-sgx-common.h  tcti-sgx-init-param-tests.c  tcti-sgx-mgr-init-callback.cpp  tcti-sgx-mgr-init-null-callback.cpp  tcti-sgx-mgr-init-tests.c  tcti-sgx-mgr-init-tests.cpp  tcti-sgx-mgr-init-userdata.cpp  tcti-sgx-mgr-ocall-tests.c  tcti-sgx-mgr-ocall-tests.cpp  tcti-sgx-struct-tests.c  tcti-sgx_null-wraps.c  tcti-util.c  tss2-tcti-sgx-call-tests.c  tss2-tcti-sgx-common.c  tss2-tcti-sgx-common.h  tss2-tcti-sgx-init-param-tests.c  tss2-tcti-sgx-struct-tests.c  tss2-tcti-sgx_null-wraps.c  tss2tcti-skeleton-call-tests.c  tss2tcti-skeleton-common.c  tss2tcti-skeleton-common.h  tss2tcti-skeleton-init-param-tests.c  tss2tcti-skeleton-struct-tests.c
